[package]
name = "autd3-link-ethercrab"
version = "28.0.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license = "MIT"
description = "AUTD3 link using EtherCrab"
repository = "https://github.com/shinolab/autd3-link-ethercrab"
readme = "README.md"
keywords = ["autd"]

[dependencies]
async-channel = "2.3.1"
autd3-driver = "28.0.0"
ethercrab = "0.5.0"
serde = { version = "1.0.210", optional = true }
ta = "0.5.0"
thiserror = "1.0.61"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_Media_Multimedia", "Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2.144" }

[dev-dependencies]
anyhow = "1.0.86"
autd3 = "28.0.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
serde = ["dep:serde"]
async-trait = ["autd3-driver/async-trait"]
