[package]
name = "autd3-link-ethercrab"
version = "29.0.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license = "MIT"
description = "AUTD3 link using EtherCrab"
repository = "https://github.com/shinolab/autd3-link-ethercrab"
readme = "README.md"
keywords = ["autd"]

[dependencies]
async-channel = { version = "2.3.1", default-features = false }
autd3-core = { version = "29.0.0", default-features = false, features = ["link", "async"] }
ethercrab = { version = "0.5.3", default-features = false, features = ["std"] }
serde = { version = "1.0.217", default-features = false, optional = true }
ta = { version = "0.5.0", default-features = false }
thiserror = { version = "2.0.11", default-features = false }
tokio = { version = "1.41.0", default-features = false, features = ["rt-multi-thread", "time"] }
tracing = { version = "0.1.41", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", default-features = false, features = ["Win32_Media_Multimedia", "Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2.169", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0.95", default-features = false }
autd3 = { version = "29.0.0", default-features = false, features = ["async"] }
pnet_datalink = { version = "0.35.0", default-features = false, features = ["std"] }
tokio = { version = "1.43.0", default-features = false, features = ["macros"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt"] }

[features]
serde = ["dep:serde"]
blocking = []
async-trait = ["autd3-core/async-trait"]
